--- a/capstone-team-management-website/src/App.css
+++ b/capstone-team-management-website/src/App.css
@@ -7,12 +7,11 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
+.app-cover {
+  min-height: 100% ;
+  min-width: 100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +27,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
